Update the SCIM SDK test code to Java 17
This commit updates the unit test code to integrate new JDK features.
The primary example of this is text blocks, which is ideal for
multi-line JSON text.

Reviewer: vyhhuang
Reviewer: dougbulkley

JiraIssue: DS-49655